ちょっとサイト作わ！

--- a/html/samurai1.html
+++ b/html/samurai1.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
+  <title>html/css学習</title>
   <link rel="stylesheet" href="C:\Users\kanek\OneDrive\デスクトップ\samurai\css\samurai1.css">
 </head>
 
 <body>
-  <h1>hello world!</h1>
+  <h1 id="text-center">hello world!</h1>
   <p>サムライスクールの教材のほうがわかりやすいような..</p>
   <h1>lets start html and css</h1>
   <p></p>
